# StreamEarPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-windows.yml
cmake/: Findlibobs.cmake  Findobs-frontend-api.cmake
data/locale/: en-US.ini
src/: plugin-main.c  ring-buffer.c  ring-buffer.h  streamear-output.c  streamear-output.h  tcp-sender.c  tcp-sender.h
